:white_check_mark: make sure HEIF is supported